InterSpec_resources/InterSpec.css
/* ... */
.modal-footer button,.modal-footer button:hover{
  margin-right:2px;
  margin-left:2px;
}


.CanvasForDragging
{
  -moz-user-select: none; 
  -khtml-user-select: none; 
  -webkit-user-select: none; 
  -o-user-select: none;
  user-select: none;
}



.PopupDivMenu
{
  background-color: #FAFAFA;
  border: solid 1px #e1e1e1;
  max-height: 90%;
  overflow-y: auto;
}


.PopupDivMenuItem-disabled
{
background: none;
color: #D2D2D2;
}

.NeutDetCbItem
{
  color: blue;
}


.DialogClose
{
  float: right;
}


.helpPopupMainContainer {
  opacity:1.0;
  border: 0px solid black;

}

.helpPopupMainContainer2 {
  position:relative;
  opacity:1.0;
  border: 0px solid black;
  left:15px;
  top:-8px;
}



.toolTip {
font-size: 80%;
opacity:1.0;
top:-8px;
left:15px;
background-color: rgb(253, 255, 218);
border: 1px solid #73a7f0;
width: 200px;
height: 100px;
border-radius: 4px;
-moz-border-radius: 4px;
-webkit-border-radius: 4px;
box-shadow: 0px 0px 8px -1px black;
-moz-box-shadow: 0px 0px 8px -1px black;
-webkit-box-shadow: 0px 0px 8px -1px black;
}

.toolTip p {
padding-left:10px;
}



.UseInfoStack
{
  border-left: solid 1px #e1e1e1;
  margin-left: 5px;
  padding-left: 10px;
}

.UseInfoItem
{
  margin-left: 10px;
  margin-right: 5px;
  overflow-y: auto;
}

.UseInfoTabsWidget
{
}


.UseInfoTabsStack
{
  border: 1px solid gray;
  border-top: none;
}

/* .SideMenu holds all the size information for the elements, while .VerticalMenu holds the styling
 (color, hover, etc).
*/
.SideMenu
{
  padding-left: 10px;
  padding-right:10px;
  font-size: 13px;
  width: 12.5em;
}

.SideMenu li
{
  font-weight: bold;
  height: 2.5em;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-top: 2px;
  margin-bottom: 2px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.SideMenu a
{
  padding-left: 10px;
  padding-right: 5px;
}


.VerticalMenu
{
  margin: 0px;
  list-style-type: none;
  overflow: auto;
}

.VerticalMenu > li
{
}

.VerticalMenu li
{
  vertical-align:middle;
  color: #ffffff;
}

.VerticalMenu > .Wt-separator {
    height: 0.25em;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    padding-top: 0px;
    padding-bottom: 0px;
}

.VerticalMenu a
{
  cursor:pointer;
}


/*fix the menu item links that the SRB CSS messes up*/
ul.Wt-popupmenu > li > a > span > span
{ 
  font-weight: normal;
  color: black;
}

ul.Wt-popupmenu > li.active > a > span > span
{
 color: #E0F5FF;
}

ul.Wt-popupmenu > li > a > span > span:hover
{
 color: white;
}


.VerticalMenu li.item > a
{
color: white;
}

.VerticalMenu li.itemselected > a
{
color: #E0F5FF;
}

.VerticalMenu li :hover
{
  border-color: #eeeeee #eeeeee #dddddd;
}

.VerticalMenu li.itemselected
{
background: #C6C6C6;
}
  
.VerticalMenu li.itemselected:hover
{
}

.VerticalMenu li.item
{
background: #888888;
}

.VerticalMenu li.item:hover
{
background: #9B9B9B;
}


.SampleSpecRow
{
  overflow: hidden;
}

.SampleSpecText
{
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 5px;
}

.SampleSpecLoadBtn
{
  display: none;
}

.Wt-selected > .SampleSpecRow > .SampleSpecLoadBtn
{
  /* display: inline-block;
  margin: 0px auto; */
  display: inline;
  float: right;
  margin-right: 5px;
  margin-top: 4px;  /* centers vertically; not a great solution since only works for 30px height rows, but works for now */
}



.PeakInfoDisplay
{
  margin-top: 5px;
  margin-bottom: 3px;
  margin-right: 4px;
  margin-left: 4px;
  overflow-y: hidden;
}


.PeakInfoDisplayButtonDiv {
  padding-left: 3px;
}

.PeakInfoHlpBtn {
  margin-right: 5px;
  position: absolute;
  left: 1px;
  bottom: 0px;
}

.PeakSearchBtn {
  margin-left: 25px;
}

.PeakInfoDisplayButtonDiv > button {
  margin-right: 5px;
}


/* A button that shows up as a link. */
.LinkBtn, .LinkBtn:hover {
  float: right;
  background: none !important;
  border: none !important;
  color: blue;
}

.WarningWidget
{
  top:0px;
  left:0px;
  right:0px;
  bottom:0px;
}

.WarningMsg
{
  padding: 2px;
  overflow-x: hidden;
}



.FloatLeft, .FloatLeft:hover
{
  float:left;
}

.PreserveLastCalCb
{
  margin-left: 1.0em;
}



.AuxWindow-content, .AuxWindow-footer
{
padding: 0px;
/*border: 2px solid red;*/

overflow: auto;

-moz-user-select: none; 
-khtml-user-select: none; 
-webkit-user-select: none; 
-o-user-select: none;
}

.titleVertMiddle
{
    display: inline-block;
    padding-top:4px;
    padding-left: 8px;
    vertical-align: middle;
}

.helptitlebar,.helptitlebar:hover
{
  width:auto;
  padding: 0px;
  height: 25px;
  background-color: #5492EE;
}

.helpIconTitleBar
{
vertical-align: middle;
margin: 4px;
}

.titlebar
{
width:auto;
padding: 0px;
height: 25px;
}

.titlebar:hover
{
background-color: #909090;
}


.CollaseIcon
{
}

.ExpandIcon
{
}

.ExpandedDialogfooter
{
  height: 0px; padding: 0; margin: 0;
}

.CollapsedDialogFooter
{
  height: 10px; padding: 0; margin: 0;
  background-color: #EEEEEE;
}


.plusimg
{
padding: 0;
margin-left: 0;
}

.minusimg, .minusimg-disable
{
padding: 0;
margin-left: -7px;
}


.minusimg-disable
{
opacity:0.4;
}


.peakinfo
{
  display: inline-block;
  position:absolute;
  background: #FFFFCC;
  border:2px solid #444422;
  padding-left: 5px;
  padding-right: 3px;
  padding-top: 3px;
  padding-bottom: 3px;
  
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  opacity: 0.85;
}


.InfoLink
{
  color:grey;
  text-decoration:underline;
  cursor:pointer;
  border:1px solid #e1e1e1;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
}


button, button:hover {
  font-weight:bold;
  vertical-align: middle;
  border:1px solid #e1e1e1;
  color: #FFFFFF;
  background-color: #888888;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  height: 23px;
}

button:hover, .submit:hover {
  color: #f2f2f2;
  border-style: solid;
  border:1px solid #e6e6e6;
  cursor: pointer;
  background-color: #737373;
}
/* ... */

